# facet2_inj_ml_model

./: .gitignore  MANIFEST.in  README.MD  pyproject.toml  train.py
.github/workflows/: test.yml
facet2_inj_ml_model/: __init__.py  beam_output_model.py  loader.py  pv_mapping.py  training.py  transforms.py
facet2_inj_ml_model/resources/: injector_machine_input_transformers_0.pt  injector_machine_input_transformers_1.pt  injector_machine_model.pt  model_config.yaml
facet2_inj_ml_model/resources/lumetorchyaml-machine/: injector_machine.yaml  injector_machine_model.pt  injector_machine_output_transformers_0.pt
facet2_inj_ml_model/resources/lumetorchyaml-sim/: injector_simulator.yaml  injector_simulator_input_transformers_0.pt  injector_simulator_model.pt  injector_simulator_output_transformers_0.pt
facet2_model/: __init__.py  train.py
tests/: test_model_benchmark.py
