[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facet2-model"
version = "0.1.0"
description = "FACET PyTorch model package"
readme = "README.MD"
requires-python = ">=3.8"
dependencies = [
    "lume-torch @ git+https://github.com/lume-science/lume-torch", 
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.setuptools]
py-modules = ["train"]

[tool.setuptools.packages.find]
include = ["facet2_model*"]

[tool.setuptools.package-data]
facet2_model = ["resources/*"]